--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Datos del equipo</title>
+<title>App7 Swipe con la pantalla Deslizar</title>
 
 <!--grupo CSS-->
 <link rel="stylesheet" href="css/app7.min.css"/>
@@ -14,16 +14,16 @@
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
 <script src="js/acciones.js" type="text/javascript"></script>
 
-<script src="phonegap.js"></script><!-- necesario*/ -->
+<script src="phonegap.js"></script>
 
 </head> 
 <body>
 <div data-role="page" id="Principal" data-theme="b">
- <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
- <h1> Aplicacion 7 deslizar (swipe) </h1>
- </div>
- <div data-role="main" class="ui-content">
- <div>
+<div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
+<h1>App 7 deslizar swipe </h1>
+</div>
+<div data-role="main" class="ui-content">
+  <div>
  <ul data-role="listview" data-theme="b" class="ui-listview ui-group-theme-a">
   <li class="ui-first-child ui-last-child">
   <a href="#page3" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
@@ -33,15 +33,15 @@
   
   </ul>
   </div>
-  </div>
-  
+</div>
+ 
   <div data-role="footer" align="center" data-theme="b" data-position="fixed">
   <h4> Octavio Leon Amador </h4>
   <img src="res/android/mdpi.png" width="56" height="46">
   </div>
   </div>
-  
-  <div data-role="page" id="page3" data-theme="b"
+ 
+ <div data-role="page" id="page3" data-theme="b">
   <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
   <h1> Acciones </h1>
   </div>
@@ -69,7 +69,7 @@
   
   <div data-role="page" id="page4" data-theme="b">
   <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
-  <h1> Desliza a la izquierdad </h1>
+  <h1> Desliza a la izquierda </h1>
   </div>
   <div data-role="content" align="center">
   <div id="izquierda" style="width:90%;height:300px;background-color:#09F;">
