--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <div data-role="page" id="Principal" data-theme="b">
 <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
-<h1>App 7 deslizar swipe </h1>
+<h1>App 7 deslizar Swipe </h1>
 </div>
 <div data-role="main" class="ui-content">
   <div>
